triviagame/force-app/main/default/objects/Trivia_Question__c/Trivia_Question__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: a set of predefined questions to be used for trivia games</description>
    <label>Trivia Question</label>
    <nameField>
        <displayFormat>TQ-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trivia Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>