triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Choice_A__c.field-meta.xml
<CustomField>
    <fullName>Choice_A__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Answer option A</description>
    <inlineHelpText>Answer option A, is required</inlineHelpText>
    <label>Choice A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>