triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Choice_B__c.field-meta.xml
<CustomField>
    <fullName>Choice_B__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Answer option B</description>
    <inlineHelpText>Answer option B</inlineHelpText>
    <label>Choice B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>