triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Choice_C__c.field-meta.xml
<CustomField>
    <fullName>Choice_C__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Answer option C</description>
    <inlineHelpText>Answer option C</inlineHelpText>
    <label>Choice C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>