triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Choice_D__c.field-meta.xml
<CustomField>
    <fullName>Choice_D__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Answer option D</description>
    <inlineHelpText>Answer option D</inlineHelpText>
    <label>Choice D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>