triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Choice_E__c.field-meta.xml
<CustomField>
    <fullName>Choice_E__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Answer option E</description>
    <inlineHelpText>Answer option E, optional field</inlineHelpText>
    <label>Choice E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>