triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Trivia Multiplayer Game: Lookup to correct answer</description>
    <inlineHelpText>Lookup to correct answer</inlineHelpText>
    <label>Correct Answer</label>
    <referenceTo>Trivia_Answer__c</referenceTo>
    <relationshipLabel>Trivia Questions</relationshipLabel>
    <relationshipName>Trivia_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>