triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Correct_Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Option__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Correct Answer from multiple choices</description>
    <inlineHelpText>Correct Answer from multiple choices</inlineHelpText>
    <label>Correct Answer Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>