triviagame/force-app/main/default/objects/Trivia_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: question</description>
    <inlineHelpText>question</inlineHelpText>
    <label>Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>