triviagame/force-app/main/default/objects/Trivia_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Choice_A__c</columns>
    <columns>Choice_B__c</columns>
    <columns>Choice_C__c</columns>
    <columns>Choice_D__c</columns>
    <columns>Choice_E__c</columns>
    <columns>Correct_Answer_Option__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>